--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@netlify/functions": "^0.11.0",
+    "@octokit/graphql": "^4.8.0",
+    "@octokit/oauth-app": "^3.6.0",
+    "@octokit/oauth-methods": "^1.2.6",
+    "cookie": "^0.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
     "vite": "^2.7.2"
   }
